--- a/Top up Web/Index.html
+++ b/Top up Web/Index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login Ngab</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-  
-
     <div class="container">
         <h1>Login Page</h1>
         <form id="loginForm">
