--- a/Praktikum WEB/index.html
+++ b/Praktikum WEB/index.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MOdul 1</title>
 </head>
+<!-- animasi iteration = looping
+    animasi direvtion = direksi animasi misal di reverse 
+    animasi duration = untuk membuat durasi animasi -->
 <body>
+    <p>Nama Saya Ridhuan Rangga Kusuma <br> Saya adalah Seorang FullStack Developer</p>
+    <a href="khusus/halaman.html"> Kunjungi </a>
+    <h1>Judul 1</h1>
+    <h2>Judul 2</h2>
+    <h3>Judul 3</h3>
+    <h4>Judul 4</h4>
+    <h5>Judul 5</h5>
+    <h6>Judul 6</h6>
 
+    <img  src="../Top up Web/Gojo.jpeg" alt="index">
+    <!-- ini Tag Table -->
+    <table border="4">
+        <tr >
+            <!-- Kolom -->
+            <td>kolom1</td>
+            <td>kolom2</td>
+            <td>kolom3</td>
+        </tr>
+        <tr>
+            <td>kolom4</td>
+            <td>kolom5</td>
+        </tr>
+        <tr>
+            <th bgcolor="red">nama</th>
+        </tr>
+    
+    </table>
+    <!-- ini Div untuk mengelompokkan kaya divisi -->
+    <div>
+        <p>Nama Saya Ridhuan Rangga Kusuma <br> Saya adalah Seorang FullStack Developer</p>
+    <a href="khusus/halaman.html"> <img src="Gunung.jpeg" alt="Logo Gunung" width="50" height="50"> <p>Gunung</p></a>
+    <h1 >Judul 1</h1>
+    <h2>Judul 2</h2>
+    <h3>Judul 3</h3>
+    <h4>Judul 4</h4>
+    <h5>Judul 5</h5>
+    <h6>Judul 6</h6>
+
+    <img  src="../Top up Web/Gojo.jpeg" alt="index">
+  
+    </div>
+    <div>
+        <h2>inputkan sesuatu</h1>
+        <input type="text" name="" id="">
+        <input type="number" name="" id="">
+    </div>
+    <div>
+        <label for="lk">Laki Laki
+        <input type="radio" name="gender" value="Laki laki" id="lk">
+        </label>
+        <label for="pw"> Perempuan</label>
+        <input type="radio" name="gender" value="Perempuan" id="pw"> 
+
+        <!-- Hobby -->
+        <h2>Pilih Hobby</h2>
+        <label for="">Futsal</label>
+        <input type="checkbox" name="" id="" value="Futsal">
+        <br>
+        <!-- Text Area -->
+        <textarea name="text id="" cols="30" rows="10"></textarea>
+        <!-- tombol -->
+        <br>
+        <input type="button" name="" id="" value="ini Button dari input">
+        <button>ini Button</button>
+    </div>
 </body>
 </html>
