--- a/Simple Website/wan.html
+++ b/Simple Website/wan.html
@@ -11,15 +11,21 @@
 <body>
     <header class="header">
         <nav class="desktop1">
-            <ul class="nav-link">
-                <li><a href="https://www.instagram.com/ridhuanranggakusuma/">Instagram</a>
-                <li><a href="https://github.com/ridhuanDeV">Github</a>
-                <li><a href="wa/me/082113472156">Whatsapp</a>
-                </li>
+           
+                <div class="ig">
+                    <a href="https://www.instagram.com/ridhuanranggakusuma/"><img src="Instagram PNG.PNG" alt="Logo Instagram" width="50" height="50"><p>Instagram</p></a>
+                </div>
+                <div class="ig">
+                    <a href="https://github.com/ridhuanDeV"><img src="github PNG.png" alt="Logo Instagram" width="50" height="50"><p>Github</p></a>
+                </div>
+                <div class="ig">
+                    <a href="https://api.whatsapp.com/send?phone=082113472156"><img src="Whatsapp PNG.PNG" alt="Logo Instagram" width="50" height="50"><p>Whatsapp</p></a>
+                </div>
+                
 
             </ul>
             <ul>
-            <li><a data-link="home" href="#" class="home1">Home</a></li>           
+            <a data-link="home" href="#" class="home1">Home</a>           
             </ul>
         </nav>
     </header>
@@ -34,6 +40,11 @@
                     <p data-type="2">Ikuti Saya Untuk Mendapatkan Informasi Lebih Lanjut Mengenai Detail Saya !</p>
                 </section>
         </aside>
+        <div>
+            <Button disabled> Menu Gagal</Button>
+            <button> Menu Utama</button>
+            <input type="checkbox" class="cekbox" name="" id="">Stars Rising 
+        </div>
     </main>
 
         </body>
